--- a/restaurant_reservasi/api/static/style.css
+++ b/restaurant_reservasi/api/static/style.css
@@ -1,6 +1,3 @@
-/* style.css */
-
-/* Reset default browser styling */
 * {
   margin: 0;
   padding: 0;
@@ -10,8 +7,6 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f0f0f0;
-  color: #333;
-  text-align: center;
   padding: 20px;
 }
 
@@ -21,12 +16,11 @@ h1 {
   font-size: 2.5em;
 }
 
-p {
-  color: #666;
+.description {
+  color: #111111;
   font-size: 1.2em;
   margin-bottom: 20px;
 }
-
 .container {
   background-color: #fff;
   border-radius: 10px;
@@ -35,19 +29,4 @@ p {
   max-width: 800px;
   margin: 0 auto;
   margin-top: 50px;
-}
-
-a {
-  display: inline-block;
-  margin-top: 20px;
-  padding: 10px 20px;
-  color: #fff;
-  background-color: #007bff;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-a:hover {
-  background-color: #0056b3;
 }
