--- a/restaurant_reservasi/api/templates/home.html
+++ b/restaurant_reservasi/api/templates/home.html
@@ -6,12 +6,41 @@
     <title>Home</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'style.css' %}" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
   </head>
-  <body>
-    <div class="container">
-      <h1>Welcome to My Django App</h1>
-      <p>This is the home page.</p>
-      <a href="#">Learn More</a>
+  <body class="bg-dark-subtle">
+    <div class="container-fluid container">
+      <h1 class="text-center">Selamat Datang di API Reservasi Restoran</h1>
+      <p class="description text-xl-end">
+        <span style="font-weight: bold">Latar Belakang:</span> Industri restoran
+        adalah salah satu sektor yang sangat kompetitif, di mana pengalaman
+        pelanggan sering kali menjadi pembeda utama antara sukses dan gagal.
+        Salah satu aspek penting dari pengalaman pelanggan adalah proses
+        reservasi meja. Pelanggan menginginkan kemudahan dalam membuat,
+        mengelola, dan membatalkan reservasi tanpa harus berhadapan dengan
+        proses yang rumit dan memakan waktu.Untuk mengatasi tantangan-tantangan
+        ini, pengembangan API reservasi restoran berbasis Django diusulkan
+        sebagai solusi yang efektif. API ini diharapkan dapat menyederhanakan
+        dan mengotomatisasi proses reservasi, memastikan integrasi yang lancar
+        dengan sistem lain, menyediakan informasi real-time, meningkatkan
+        pengalaman pengguna, dan mengirimkan notifikasi serta pengingat secara
+        otomatis kepada pelanggan.
+      </p>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
